[package]
name = "litequad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = { version = "=0.3.0-alpha.45", features = ["log-impl"] }
#miniquad = {path = "../miniquad", features = ["log-impl"] }
quad-rand = "0.2.1"
glam = {version = "0.14", features = ["scalar-math"] }
#image = { version = "0.23.12", default-features = false, features = ["png", "tga"] }
macroquad_macro = { version = "0.1.7" }
fontdue = "0.5.0"
bumpalo = "3.4"
backtrace = { version = "0.3.60", optional = true, default-features = false, features = [ "std", "libbacktrace" ] }
log = { version = "0.4", optional = true }
